--- a/asd-projects/snake/index.css
+++ b/asd-projects/snake/index.css
@@ -1,17 +1,19 @@
 
 body {
-  background-color: darkgreen;
+  background-color: #1A5E63;
 }
 
 #board {
   width: 440px;
   height: 440px;
-  border: 1px solid white;
-  background-color: black;
+  border: 5px solid #DCABDF;
+  background-color: #C792DF;
+  margin: auto;
 }
 
 #score, #highScore {
-  color: white;
+  color: #8AEA92;
+  text-align: center;
 }
 
 .snake, .apple {
@@ -23,15 +25,15 @@ body {
 }
 
 .snake {
-  background-color: green;
+  background-color: #5F1A37;
   z-index: 2;
 }
 
 #snake-head {
-  background-color: darkgreen;
+  background-color: #5F1A37;
 }
 
 .apple {
-  background-color: red;
+  background-color: #776885;
   z-index: 1;
 }
