--- a/asd-projects/snake/index.css
+++ b/asd-projects/snake/index.css
@@ -7,13 +7,11 @@ body {
   width: 440px;
   height: 440px;
   border: 5px solid #DCABDF;
-  background-color: #C792DF;
-  margin: auto;
+  background-color: #dcd1e2;
 }
 
 #score, #highScore {
   color: #8AEA92;
-  text-align: center;
 }
 
 .snake, .apple {
