--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -11,12 +11,23 @@ body {
   position: relative;
 }
 
+
 #walker {
   background-color: teal;
   width: 50px;
   height: 50px;
   position: absolute;
   border-radius: 50px;
-/*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
-/*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
+  left: 100px;  /* Uncomment if you want to set a "starting" position */
+  top: 100px;  /* Uncomment if you want to set a "starting" position */
+}
+
+#walker0 {
+  background-color: salmon;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  border-radius: 50px;
+  left: 100px;  /* Uncomment if you want to set a "starting" position */
+  top: 100px; /* Uncomment if you want to set a "starting" position */
 }
